# tree-sitter-navi-stream

./: .gitignore  Cargo.toml  DEVELOPMENT  README.md  binding.gyp  grammar.js  package.json
.github/workflows/: fuzz.yml  publish.yml
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
examples/: simple.nvs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: declarations.txt  literal.txt  plot.txt
